--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="s-header__block">
                     <div class="s-header__logo">
                         <a class="logo" href="index.html">
-                            <img src="images/logo.png" alt="Homepage">
+                            NANE EXPERIENCE </br>C B O
                         </a>
                     </div>
 
@@ -423,6 +423,7 @@
 </body>
 
 </html>
+
 
 
 
