--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                 <div class="s-header__block">
                     <div class="s-header__logo">
-                        <a class="logo" href="index.html">
+                        <a class="logo-title" href="index.html">
                             NANE EXPERIENCE </br>C B O
                         </a>
                     </div>
@@ -423,6 +423,7 @@
 </body>
 
 </html>
+
 
 
 
