--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                           <article class="brick entry">
                                 <a href="#modal-03" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/street-fam.jpg" alt="">
+                                        <img src="images/girls/street-fam.jpg" alt="">
                                     </div>
                                
                                 </a>
@@ -163,7 +163,7 @@
                           <article class="brick entry">
                                 <a href="#modal-03" class="entry__link">
                                     <div class="entry__thumb">
-                                       <img src="images/education-1.jpg" alt="">
+                                       <img src="images/girls/education-1.jpg" alt="">
                                     </div>
                                    
                                 </a>
@@ -423,6 +423,7 @@
 </body>
 
 </html>
+
 
 
 
