--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                     <div class="contact-block">
                         <h6>PHONE</h6>
                         <ul class="contact-list">
-                            <li><a href="tel:197-543-2345">+254 197 543 2345</a></li>
+                            <li><a href="tel:197-543-2345">(+254) 0710834649</a></li>
                         </ul>
                     </div>
 
@@ -423,6 +423,7 @@
 </body>
 
 </html>
+
 
 
 
