--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@ Being a beneficiary of kindness and support from people he least expected, Shadr
 
                         <div class="s-intro__content-buttons">
                             <a href="#download" class="btn btn--stroke s-intro__content-btn smoothscroll">More About Us</a>
-                            <a href="https://player.vimeo.com/video/14592941?color=f26522&title=0&byline=0&portrait=0" class="s-intro__content-video-btn">
+                            <a href="#https://player.vimeo.com/video/14592941?color=f26522&title=0&byline=0&portrait=0" class="s-intro__content-video-btn">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M7 6v12l10-6z"></path></svg>
                             </a>
                         </div>
@@ -234,7 +234,7 @@ Being a beneficiary of kindness and support from people he least expected, Shadr
                     <div class="contact-block">
                         <h6>PHONE</h6>
                         <ul class="contact-list">
-                            <li><a href="tel:197-543-2345">+254 197 543 2345</a></li>
+                            <li><a href="tel:197-543-2345">+254 0710834649</a></li>
                         </ul>
                     </div>
 
