--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                           <article class="brick entry">
                                 <a href="#modal-03" class="entry__link">
                                     <div class="entry__thumb">
-                                       <img src="images/girls/street-fam.jpg" alt="">
+                                       <img src="images/gallery/library.jpg" alt="">
                                     </div>
                                    
                                 </a>
@@ -262,7 +262,7 @@
                           <article class="brick entry">
                                 <a href="#modal-03" class="entry__link">
                                     <div class="entry__thumb">
-                                       <img src="images/youth.jpg" alt="">
+                                       <img src="images/feeding-1.jpg" alt="">
                                     </div>
                                 
                                 </a>
@@ -428,6 +428,7 @@
 </body>
 
 </html>
+
 
 
 
