--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                           <article class="brick entry">
                                 <a href="#modal-03" class="entry__link">
                                     <div class="entry__thumb">
-                                       <img src="images/girls/education-1.jpg" alt="">
+                                       <img src="images/education-1.jpg" alt="">
                                     </div>
                                    
                                 </a>
@@ -428,6 +428,7 @@
 </body>
 
 </html>
+
 
 
 
