--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NANE EXPERIENCE C.B.O</title>
+    <title>NANE EXPERIENCE CBO</title>
 
     <script>
         document.documentElement.classList.remove('no-js');
@@ -412,6 +412,7 @@
 </body>
 
 </html>
+
 
 
 
