--- a/index.html
+++ b/index.html
@@ -31,20 +31,21 @@
 
 
 <body id="top">
+
+    <div class="bla-bla-bla">We are currently updating our website - please check back soon!</div>
+
 <div class="clock">
   <div class="hand hour-hand"></div>
   <div class="hand minute-hand"></div>
   <div class="hand second-hand"></div>
   <div class="center-dot"></div>
 </div>
-<div class="bla-bla-bla">This clock is a simple analog clock with hour, minute, and second hands, and a vintage design. It was created using HTML, CSS, and JavaScript. The clock is displayed on a circular background with a vintage image, and the hands are designed to match the vintage aesthetic.
-
-  The JavaScript code uses the Date object to get the current time and update the position of the hands every second using the setInterval() method. The positions of the hands are calculated using simple math to convert the current time into degrees for each hand's rotation. The CSS is used to position the hands and add the box shadow effect to the clock. Overall, this clock is a fun and simple project that showcases the power of HTML, CSS, and JavaScript for creating dynamic and interactive web content. </div>
 
 
 </body>
 
 </html>
+
 
 
 
