--- a/get-involved.html
+++ b/get-involved.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>HOME - NANE EXPERIENCE C B O</title>
+    <title>Get Involved - Nane Experience C B O</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -26,7 +26,6 @@ TemplateMo 580 Woox Travel
 https://templatemo.com/tm-580-woox-travel
 
 -->
-
   </head>
 
 <body>
@@ -57,7 +56,7 @@ https://templatemo.com/tm-580-woox-travel
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="index.html" class="active">HOME</a></li>
                         <li><a href="about.html">ABOUT US</a></li>
                         <li><a href="impact.html">OUR IMPACT</a></li>
                         <li><a href="get-involved.html">GET INVOLVED</a></li>
@@ -74,72 +73,47 @@ https://templatemo.com/tm-580-woox-travel
   </header>
   <!-- ***** Header Area End ***** -->
 
-  <!-- ***** Main Banner Area Start ***** -->
-  <section id="section-1">
-    <div class="content-slider">
-      <input type="radio" id="banner1" class="sec-1-input" name="banner" checked>
-      <input type="radio" id="banner2" class="sec-1-input" name="banner">
-      <input type="radio" id="banner3" class="sec-1-input" name="banner">
-      <input type="radio" id="banner4" class="sec-1-input" name="banner">
-      <div class="slider">
-        <div id="top-banner-1" class="banner">
-          <div class="banner-inner-wrapper header-text">
-            <div class="main-caption">
+  <div class="second-page-heading">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <h2>GET INVOLVED</h2>
+          <p>Hallo,! We're raising fund for Kibera Kids  Christmas Smile 2025 and every little bit counts. You can join us by clicking on this link <a href="https://www.mchanga.africa/fundraiser/126488">here</a>.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
-                <h1>CURRENT UPDATE</h1>
+  <div class="more-info reservation-info">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-sm-6">
+          <div class="info-item">
+            <h4>Donate</h4>
+            <a href="#">Make a lasting impact today by supporting Nane Experience C.B.O’s mission to unleash the power, dignity, and hope within our communities. Your contribution changes lives!
+</a>
+<div class="border-button"><a href="donate.html">Go</a></div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="info-item">
+            <h4>partner</h4>
+            <a href="#">We invite organizations from both the private and public sectors to join us in a collaborative effort to unlock the potential of individuals and communities.</a>
+            <div class="border-button"><a href="donate.html">Go</a></div>
 
-              <h2>
-                We're raising fund for Kibera Kids  Christmas Smile 2025 and every little bit counts.<BR> You can join us by clicking on this link <a href="https://www.mchanga.africa/fundraiser/126488">here</a>.
-              </h2>
-            
-            </div>
-   
           </div>
         </div>
-        <div id="top-banner-2" class="banner">
-          <div class="banner-inner-wrapper header-text">
-            <div class="main-caption">
-              <h1> 
-                OUR IMPACT
-              
-              </h1>
-              <div class="border-button"><a href="about.html">Go There</a></div>
-            </div>
- 
-          </div>
-        </div>
-        <div id="top-banner-3" class="banner">
-          <div class="banner-inner-wrapper header-text">
-            <div class="main-caption">
-              <h1>GET INVOLVED</h1>
-              <div class="border-button"><a href="about.html">Go There</a></div>
-            </div>
-   
-          </div>
-        </div>
-        <div id="top-banner-4" class="banner">
-          <div class="banner-inner-wrapper header-text">
-            <div class="main-caption">
-              <h1>PARTNER WITH NANE EXPERINECE</h1>
-              <div class="border-button"><a href="about.html">JOIN US</a></div>
-            </div>
- 
+        <div class="col-lg-4 col-sm-6">
+          <div class="info-item">
+            <h4>Join Us</h4>
+            <a href="#">Join our team and be part of a movement that empowers communities by driving sustainable change, fostering leadership, and creating meaningful opportunities.</a>
+            <div class="border-button"><a href="donate.html">Go</a></div>
+
           </div>
         </div>
       </div>
-      <nav>
-        <div class="controls">
-          <label for="banner1"><span class="progressbar"><span class="progressbar-fill"></span></span><span class="text">1</span></label>
-          <label for="banner2"><span class="progressbar"><span class="progressbar-fill"></span></span><span class="text">2</span></label>
-          <label for="banner3"><span class="progressbar"><span class="progressbar-fill"></span></span><span class="text">3</span></label>
-          <label for="banner4"><span class="progressbar"><span class="progressbar-fill"></span></span><span class="text">4</span></label>
-        </div>
-      </nav>
     </div>
-  </section>
-  <!-- ***** Main Banner Area End ***** -->
-  
- 
+  </div>
 
   <div class="call-to-action">
     <div class="container">
@@ -150,7 +124,7 @@ https://templatemo.com/tm-580-woox-travel
         </div>
         <div class="col-lg-4">
           <div class="border-button">
-            <a href="CONTACT.html">GET IN TOUCH</a>
+            <a href="reservation.html">GET IN TOUCH</a>
           </div>
         </div>
       </div>
@@ -181,17 +155,9 @@ https://templatemo.com/tm-580-woox-travel
   <script src="assets/js/custom.js"></script>
 
   <script>
-    function bannerSwitcher() {
-      next = $('.sec-1-input').filter(':checked').next('.sec-1-input');
-      if (next.length) next.prop('checked', true);
-      else $('.sec-1-input').first().prop('checked', true);
-    }
-
-    var bannerTimer = setInterval(bannerSwitcher, 5000);
-
-    $('nav .controls label').click(function() {
-      clearInterval(bannerTimer);
-      bannerTimer = setInterval(bannerSwitcher, 5000)
+    $(".option").click(function(){
+      $(".option").removeClass("active");
+      $(this).addClass("active"); 
     });
   </script>
 
